--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-=)
+<!DOCTYPE HTML
+
+<head>
+  <link rel="stylesheet" type="text/css" href="bootstrap.css">
+</head>
+
+<body>
+   <script src="bootstrap.js"></script> 
+</body>
+</html>
