--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Welcome to Van Der Werff Hospitality</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<!--    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
+    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron-narrow.css" rel="stylesheet">
@@ -30,6 +30,19 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+<!--
+WAAROM doe ik dit
+
+
+WAT kan ik voor u betekenen
+
+
+HOE gaan we samen van start
+
+
+CONTACT wanneer maken we kennis met elkaa
+
+-->
 
   <body>
 
@@ -37,18 +50,19 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation" class="active"><a href="#">Waarom</a></li>
+            <li role="presentation"><a href="#">Wat</a></li>
+            <li role="presentation"><a href="#">Hoe</a></li>
             <li role="presentation"><a href="#">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">Van Der Werff Hospitality</h3>
       </div>
 
       <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
+        <h1>Specialisten in professionalisering in de gastvrijheidsbranche.</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Read more..</a></p>
       </div>
 
       <div class="row marketing">
