--- a/index.html
+++ b/index.html
@@ -61,22 +61,24 @@ CONTACT wanneer maken we kennis met elkaa
 
       <div class="jumbotron">
         <h1>Specialisten in professionalisering in de gastvrijheidsbranche.</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p class="lead">Coaching, curing en conceptontwikkeling.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Read more..</a></p>
       </div>
+      
+      
+      <!--Ik kan u adequaat van dienst zijn op de volgende gebieden:
+Coaching –  ik help u inzicht te krijgen in uw persoonlijke keuzes
+Curing – we maken samen uw bedrijf gezond
+Conceptontwikkeling – ik help u een uniek en onderscheidend bedrijf neer te zetten in de hospitalitybranche
+
+
+WIE ben ik
+ 
+Piet van der Werff (1969) , heeft al ruim 40 jaar een enorme voorliefde voor de gastronomie. Toen hij op zijn 6e zijn eerste slak at aan het Italiaanse Lago Maggiore, ontwaakte zijn passie voor (slow) food.
+Na 12 intensieve jaren in de horecasales bij Lindenhoff, sloeg hij in 2014 een nieuwe weg in en deelt sindsdien met ongetemd enthousiasme zijn kennis en ervaring met (horeca)ondernemers. Hierbij stelt Piet zijn omvangrijke netwerk open voor een ieder die graag voorop wil lopen met zijn of haar (horeca)bedrijf.
+Naast de “eerste hulp voor horecaondernemers” houdt Piet zich bezig met het selecteren en leveren van gastronomische producten uit Italië en Spanje--->
 
       <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
         <div class="col-lg-6">
           <h4>Subheading</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
