--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@ CONTACT wanneer maken we kennis met elkaa
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Waarom</a></li>
-            <li role="presentation"><a href="#">Wat</a></li>
-            <li role="presentation"><a href="#">Hoe</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
+            <li role="presentation"><a href="wat.html">Wat</a></li>
+            <li role="presentation"><a href="hoe.html">Hoe</a></li>
+            <li role="presentation"><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Van Der Werff Hospitality</h3>
+        <h2>Van Der Werff</h2>
       </div>
 
       <div class="jumbotron">
-        <h1>Specialisten in professionalisering in de gastvrijheidsbranche.</h1>
+        <h1><i>Specialisten in professionalisering in de gastvrijheidsbranche.</i></h1>
         <p class="lead">Coaching, curing en conceptontwikkeling.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Read more..</a></p>
       </div>
