--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ CONTACT wanneer maken we kennis met elkaa
       </div>
 
       <div class="jumbotron">
-        <h1><i>Specialisten in professionalisering<br> in de gastvrijheidsbranche.</i></h1>
+        <h3><i>Specialisten in professionalisering</br> in de gastvrijheidsbranche.</i></h3>
+        
         <p class="lead">Coaching, curing en conceptontwikkeling.</p>
         <p><a class="btn btn-lg btn-success" href="#" role="button">Read more..</a></p>
       </div>
