--- a/wat.html
+++ b/wat.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="iconico.jpg">
 
     <title>Welcome to Van Der Werff Hospitality</title>
 
@@ -77,7 +77,8 @@ CONTACT wanneer maken we kennis met elkaa
       </div>
       
           <a name="wat"> <h1>Wat?</h1> </a>
-    <div class="row marketing">
+        <div class="cont2">
+        <div class="row marketing">
         <div class="col-lg-6">
           <p id ="subhead">Subheading</p>
           <p id ="subtekst">Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
@@ -89,8 +90,10 @@ CONTACT wanneer maken we kennis met elkaa
           <p id = "subtekst">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
       </div>
+      </div>
 <hr>
         <a name="diensten"> <h1>Diensten</h1></a>
+        <div class="cont3">
         <div class="row marketing">
         <div class="col-lg-6">
           <ul>
@@ -109,6 +112,7 @@ CONTACT wanneer maken we kennis met elkaa
            </ul>
             <p><a class="btn btn-lg btn-success" href="wat.html" role="button">navigatie menu</a></p>
         </div>
+      </div>
       </div>
       <footer class="footer">
         <p>Van Der Werff Hospitality -  Eikstraat 28, 3581XL, Utrecht - +3(12)0301234567 - +31(60)12345678</p>
