--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <script
 src="http://maps.googleapis.com/maps/api/js">
 </script>
-    <title>Welcome to Van Der Werff Hospitality</title>
+    <title>Contact - VDW Hospitality</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
