--- a/hoe.html
+++ b/hoe.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Welcome to Van Der Werff Hospitality</title>
+    <title>Hoe - VDW Hospitality</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
