--- a/wat.html
+++ b/wat.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="iconico.jpg">
 
-    <title>Welcome to Van Der Werff Hospitality</title>
+    <title>Wat - VDW Hospitality</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
